--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^9.9.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
+    "react-burger-menu": "^3.0.8",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0"
   },
