--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
     "firebase": "^9.9.0",
+    "nodemailer": "^6.7.8",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-burger-menu": "^3.0.8",
